<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg" >

    <LinearLayout
        android:id="@+id/networkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/backbtn"
                android:contentDescription="@string/Button"
                android:onClick="onBackClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/networkTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="17pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/exitBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/Button"
                android:onClick="onExitClick"
                android:src="@drawable/exitbtn" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/facebookLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/networkTitle" >

        <TextView
            android:id="@+id/loginUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/loginUser" />

        <EditText
            android:id="@+id/userMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginUser"
            android:layout_centerHorizontal="true"
            android:ems="14"
            android:hint="@string/shareMessageHint"
            android:inputType="text" />

        <requestFocus />

        <Button
            android:id="@+id/FacebookShareButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/userMessage"
            android:layout_below="@+id/userMessage"
            android:onClick="share"
            android:text="@string/sharePost" />

    </RelativeLayout>

</RelativeLayout>