<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/storeDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="50" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/backbtn"
                android:contentDescription="@string/Button"
                android:onClick="onBackClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="36"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="11pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/exitBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/Button"
                android:onClick="onExitClick"
                android:src="@drawable/exitbtn" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/storeDetailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/storeDetailTitle"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:weightSum="9" >

        <LinearLayout
            android:id="@+id/detailImageLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="9" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageStoreDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Emblem"
                    android:src="@drawable/acces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:weightSum="3" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:background="#18d7e5"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/detailBuy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:text="@string/Buy" 
                        android:visibility="gone"
                        android:onClick="onBuyClicked"/>

                    <ToggleButton
                        android:id="@+id/toggleEquip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:visibility="gone"
                        android:textSize="12sp"
                        android:textOn="@string/itemEquiped" 
                        android:textOff="@string/itemNotEquiped"
                        android:onClick="onEquipToggle"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailTextLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:weightSum="2" >

            <View
                android:id="@+id/sepDetail"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#09adb9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/descriptionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Description"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    

                    <TextView
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <View
                        android:id="@+id/sep2Detail"
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="#09adb9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/propertiesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Properties"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/Properties"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>