<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EBE431"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/page_swiper"
        android:background="@drawable/naturebg" >

        <ImageView
            android:id="@+id/petView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Emblem"
            android:src="@drawable/browndog" />

        <ImageView
            android:id="@+id/foodManger"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="14dp"
            android:layout_marginRight="68dp"
            android:contentDescription="@string/Emblem"
            android:src="@anim/food_fragment" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp" >

        <RelativeLayout
            android:id="@+id/coinLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundcoins" >

            <TextView
                android:id="@+id/currentCoinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="27dp"
                android:text="@string/currentCoins"
                android:textColor="#000000" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/coinEmblem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/Emblem"
            android:src="@drawable/coin" />

        <RelativeLayout
            android:id="@+id/connectLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/connectEmblem"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/Emblem"
                android:src="@drawable/connect"
                android:onClick="onConnectClick" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/page_swiper"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bg" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/rightBtnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gameLayout"
        android:background="@drawable/gradient_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/rightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Button"
            android:src="@drawable/arrowright"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leftBtnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gameLayout"
        android:background="@drawable/gradient_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Button"
            android:src="@drawable/arrowleft"
            android:textAlignment="gravity" />
    </LinearLayout>

</RelativeLayout>